added AI statement and readme updated

--- a/Assignment4_starter.ipynb
+++ b/Assignment4_starter.ipynb
@@ -4,7 +4,52 @@
    "cell_type": "markdown",
    "id": "b5a799b7",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "## Generative AI Use & Carbon Footprint Disclosure\n",
+    "\n",
+    "### 1. How Generative AI Was Used\n",
+    "I used ChatGPT to assist with this assignment in the following ways:\n",
+    "\n",
+    "- **Syntax assistance:** verifying correct Python and PyTorch usage (e.g., DataLoader setup, model definitions, training loop structure).\n",
+    "- **Conceptual understanding:** clarifying CNN components (convolutions, pooling, channels), dataset handling, normalization, and loss/accuracy behavior.\n",
+    "- **Debugging support:** identifying issues such as missing variables, incorrect return values, and shape mismatches.\n",
+    "- **Research summarization:** summarizing public information about CIFAR-100, Fashion-MNIST, and performance reported in the accompanying research paper.\n",
+    "- **Text refinement:** helping draft and revise answers for the discussion questions.\n",
+    "\n",
+    "All code and explanations generated with AI were **fully reviewed, tested, and validated by me** before inclusion in the final submission.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. Carbon Footprint of Using Generative AI\n",
+    "\n",
+    "The instructor provided an estimate of:\n",
+    "\n",
+    "**4.32 g CO₂ per “search query” (prompt/response interaction) when using ChatGPT.**\n",
+    "\n",
+    "I used approximately **80 prompts** during the completion of this assignment.\n",
+    "\n",
+    "#### Estimated Total Emissions\n",
+    "\n",
+    "CO₂ = 4.32 g × 80 = 345.6 g CO₂\n",
+    "\n",
+    "345.6 g CO₂ is comparable to driving a gasoline car about 1.4 km, running a 10W light bulb for roughly 70 hours, watching around 2 hours of streaming video, charging a smartphone 55–60 times, or producing about 6 cups of coffee.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. Required Metadata\n",
+    "\n",
+    "- **Model Name:** ChatGPT 5.1\n",
+    "- **Hardware Type:** Not disclosed publicly by OpenAI; typically high-performance GPU clusters (NVIDIA A100/H100 or similar).  \n",
+    "- **Time Used:** Estimated total interaction time ~3 hours across all prompts (approx. 1–2 minutes per prompt including reading, generating, and revising).  \n",
+    "- **Provider:** OpenAI (ChatGPT web interface).  \n",
+    "- **Region of Compute:** Not directly disclosed by OpenAI; likely North American data centers based on my location and typical routing.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4. Privacy Compliance\n",
+    "No personal, confidential, or identifying information about myself or others was provided to the AI system. Only assignment-related code and questions were submitted, complying with the course privacy guidelines.\n"
+   ]
   },
   {
    "cell_type": "markdown",
